# dazi-network

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml
.github/workflows/: ci.yml
app/: __init__.py  auth.py  config.py  crypto.py  db.py  embedding.py  llm.py  main.py  models.py  rate_limit.py
app/routers/: __init__.py  connections.py  health.py  interest.py  profile.py  search.py
tests/: __init__.py  conftest.py  test_auth.py
web/: index.html  netlify.toml  package-lock.json  package.json
web/public/: llms.txt
web/src/: App.css  App.tsx  index.css
